[gd_scene load_steps=49 format=3 uid="uid://bhsnp72cip8du"]

[ext_resource type="Shader" path="res://SHADERS/outline.gdshader" id="1_0vyox"]
[ext_resource type="Texture2D" uid="uid://be17xix2p17c4" path="res://SPRITES/skeleton_mage_high.png" id="1_2aoey"]
[ext_resource type="Script" path="res://player.gd" id="1_t5gei"]
[ext_resource type="AudioStream" uid="uid://06ei3vwc5lou" path="res://SFX/Whip_Whoosh_BW.11029.wav" id="3_1edxq"]
[ext_resource type="AudioStream" uid="uid://cgbqi6vsvkxjg" path="res://SFX/FireballPassByHeavy_SFXB._1.wav" id="4_qg008"]
[ext_resource type="AudioStream" uid="uid://1deeyh63h0vv" path="res://SFX/Scurry.wav" id="5_i2e14"]
[ext_resource type="Script" path="res://fireball_spawner.gd" id="6_8tcqq"]
[ext_resource type="AudioStream" uid="uid://c4nqwuiu52qg" path="res://SFX/Wince.wav" id="7_dj186"]
[ext_resource type="AudioStream" uid="uid://k3bvbkmexk4k" path="res://SFX/Footstep.wav" id="7_fqp02"]
[ext_resource type="Script" path="res://freeze_reticle_spawner.gd" id="7_p1r25"]
[ext_resource type="AudioStream" uid="uid://b5r0maxct8boj" path="res://SFX/ZombieVictimGroan.wav" id="8_c81l1"]
[ext_resource type="FontFile" uid="uid://bj0kuqitt4phg" path="res://SPRITES/alagard.ttf" id="8_uglhr"]
[ext_resource type="Texture2D" uid="uid://ctxfl6cy5y64u" path="res://SPRITES/Flashlight.png" id="10_cjekt"]
[ext_resource type="Script" path="res://audio_manager.gd" id="14_x2r6m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oq15k"]
shader = ExtResource("1_0vyox")
shader_parameter/color = Color(0.704836, 0.563498, 0.0436016, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = true
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_runqe"]
resource_name = "Death"
length = 2.0
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.107871, 0.214998, 0.322125, 0.44342, 0.555269),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [218, 219, 220, 221, 222, 223]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOver:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-577, -723), Vector2(-576, -185)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOver:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3i2lq"]
resource_name = "Idle_E"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [112, 113, 114, 115, 114, 113]
}

[sub_resource type="Animation" id="Animation_7hu3d"]
resource_name = "Idle_N"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 58, 57]
}

[sub_resource type="Animation" id="Animation_r5ik8"]
resource_name = "Idle_NE"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [84, 85, 86, 87, 86, 85]
}

[sub_resource type="Animation" id="Animation_6cj71"]
resource_name = "Idle_NW"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 30, 29]
}

[sub_resource type="Animation" id="Animation_lewys"]
resource_name = "Idle_S"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [168, 169, 170, 171, 170, 169]
}

[sub_resource type="Animation" id="Animation_vfo53"]
resource_name = "Idle_SE"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [140, 141, 142, 143, 142, 141]
}

[sub_resource type="Animation" id="Animation_iysvl"]
resource_name = "Idle_SW"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [196, 197, 198, 199, 198, 197]
}

[sub_resource type="Animation" id="Animation_5dt8w"]
resource_name = "Idle_W"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1]
}

[sub_resource type="Animation" id="Animation_anl57"]
resource_name = "Melee_E"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [124, 125, 126, 127, 128]
}

[sub_resource type="Animation" id="Animation_qicak"]
resource_name = "Melee_N"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [68, 69, 70, 71, 72]
}

[sub_resource type="Animation" id="Animation_oc22q"]
resource_name = "Melee_NE"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99, 100]
}

[sub_resource type="Animation" id="Animation_htqhx"]
resource_name = "Melee_NW"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_05pa4"]
resource_name = "Melee_S"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [180, 181, 182, 183, 184]
}

[sub_resource type="Animation" id="Animation_plnnu"]
resource_name = "Melee_SE"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [152, 153, 154, 155, 156]
}

[sub_resource type="Animation" id="Animation_tpvkt"]
resource_name = "Melee_SW"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [208, 209, 210, 211, 212]
}

[sub_resource type="Animation" id="Animation_hajc2"]
resource_name = "Melee_W"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_lp6gn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_d726y"]
resource_name = "Walk_E"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [116, 117, 118, 119, 120, 121, 122, 123]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FootStepsSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_bweqv"]
resource_name = "Walk_N"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FootStepsSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_hjuoo"]
resource_name = "Walk_NE"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91, 92, 93, 94, 95]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FootStepsSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_08wxv"]
resource_name = "Walk_NW"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FootStepsSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_03p2a"]
resource_name = "Walk_S"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [172, 173, 174, 175, 176, 177, 178, 179]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FootStepsSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_a1mkv"]
resource_name = "Walk_SE"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147, 148, 149, 150, 151]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FootStepsSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_web34"]
resource_name = "Walk_SW"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [200, 201, 202, 203, 204, 205, 206, 207]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FootStepsSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_u4w1h"]
resource_name = "Walk_W"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FootStepsSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFX/FootStepsSFX:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_glaps"]
_data = {
"Death": SubResource("Animation_runqe"),
"Idle_E": SubResource("Animation_3i2lq"),
"Idle_N": SubResource("Animation_7hu3d"),
"Idle_NE": SubResource("Animation_r5ik8"),
"Idle_NW": SubResource("Animation_6cj71"),
"Idle_S": SubResource("Animation_lewys"),
"Idle_SE": SubResource("Animation_vfo53"),
"Idle_SW": SubResource("Animation_iysvl"),
"Idle_W": SubResource("Animation_5dt8w"),
"Melee_E": SubResource("Animation_anl57"),
"Melee_N": SubResource("Animation_qicak"),
"Melee_NE": SubResource("Animation_oc22q"),
"Melee_NW": SubResource("Animation_htqhx"),
"Melee_S": SubResource("Animation_05pa4"),
"Melee_SE": SubResource("Animation_plnnu"),
"Melee_SW": SubResource("Animation_tpvkt"),
"Melee_W": SubResource("Animation_hajc2"),
"RESET": SubResource("Animation_lp6gn"),
"Walk_E": SubResource("Animation_d726y"),
"Walk_N": SubResource("Animation_bweqv"),
"Walk_NE": SubResource("Animation_hjuoo"),
"Walk_NW": SubResource("Animation_08wxv"),
"Walk_S": SubResource("Animation_03p2a"),
"Walk_SE": SubResource("Animation_a1mkv"),
"Walk_SW": SubResource("Animation_web34"),
"Walk_W": SubResource("Animation_u4w1h")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_v3cba"]
properties/0/path = NodePath("AnimationPlayer:current_animation")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("Sprite2D:modulate")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("AttackArea:monitoring")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:health")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:mana")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:enemyattackdamage")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:position")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:collision_layer")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath(".:collision_mask")
properties/8/spawn = true
properties/8/replication_mode = 1

[sub_resource type="CanvasTexture" id="CanvasTexture_ribq6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cden2"]
texture = SubResource("CanvasTexture_ribq6")
modulate_color = Color(0.352941, 1, 0, 1)

[sub_resource type="Animation" id="Animation_4b3ew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 3
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gkyet"]
resource_name = "Spin"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 3
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333, 1.0989, 1.6, 2, 2.63333, 3.0989, 3.6, 3.93333, 4.1958, 4.4955, 4.7952, 4.995),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.0, -0.261799, 0.0, -0.261799, 0.0, -0.261799, 0.0, -0.261799, 0.0, -0.261799, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7lbrm"]
_data = {
"RESET": SubResource("Animation_4b3ew"),
"Spin": SubResource("Animation_gkyet")
}

[node name="Player" type="CharacterBody2D"]
z_index = 6
y_sort_enabled = true
collision_layer = 2147485697
collision_mask = 2147485696
script = ExtResource("1_t5gei")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
y_sort_enabled = true
position = Vector2(-0.68, 0.32)
scale = Vector2(0.847194, 2.83933)
polygon = PackedVector2Array(-2.61988, -3.47826, -4, 6, 8.51462, 4.86956, 7.85965, -3.47826)

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
material = SubResource("ShaderMaterial_oq15k")
position = Vector2(1.32, -5.68)
scale = Vector2(0.63, 0.63)
texture = ExtResource("1_2aoey")
hframes = 28
vframes = 8
frame = 4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0.32, 13.32)
position_smoothing_enabled = true
position_smoothing_speed = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_glaps")
}

[node name="SFX" type="Node2D" parent="."]

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("3_1edxq")
volume_db = -0.105
pitch_scale = 1.3
bus = &"Player"

[node name="FireBallSFX" type="AudioStreamPlayer2D" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("4_qg008")
volume_db = 0.886
pitch_scale = 1.3
bus = &"Player"

[node name="DashSFX" type="AudioStreamPlayer2D" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("5_i2e14")
volume_db = -6.325
bus = &"Player"

[node name="FootStepsSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_fqp02")
bus = &"SFX"

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("7_dj186")

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("8_c81l1")

[node name="FireballSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://fireball.tscn")
script = ExtResource("6_8tcqq")

[node name="FreezeReticleSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://FreezeReticle.tscn")
script = ExtResource("7_p1r25")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_v3cba")

[node name="HurtArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 40

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtArea"]
z_index = 4
y_sort_enabled = true
position = Vector2(-9.53674e-07, 18)
rotation = 0.0508076
scale = Vector2(0.813056, 0.353188)
polygon = PackedVector2Array(-4.54253, -18.5009, -0.27956, -12.6557, 6.61045, -15.7932, 7.68726, -26.2768, 8.18804, -65.9868, 1.75863, -76.3366, -2.73725, -61.5358, -4.34456, -40.7289)

[node name="AttackArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 4
y_sort_enabled = true
position = Vector2(0.32, 13.32)
collision_layer = 16388
collision_mask = 8
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackArea"]
z_index = 4
y_sort_enabled = true
position = Vector2(-6, 23)
rotation = 0.0508076
scale = Vector2(2.30205, 1)
polygon = PackedVector2Array(-19.1623, -20.7865, -6.42667, -15.2684, 6.61045, -15.7932, 23.1329, -35.7506, 14.64, -65.7965, -0.161915, -86.0922, -13.9931, -62.4446, -16.9785, -40.0667)

[node name="BuildingFade" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 2147483648

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BuildingFade"]
y_sort_enabled = true
position = Vector2(-0.68, 0.32)
scale = Vector2(0.847194, 2.83933)
polygon = PackedVector2Array(-2.61988, -3.47826, -4, 6, 8.51462, 4.86956, 7.85965, -3.47826)

[node name="GameOver" type="Label" parent="."]
unique_name_in_owner = true
z_index = 5
offset_left = -576.0
offset_top = -185.0
offset_right = 575.0
offset_bottom = 465.0
theme_override_colors/font_color = Color(0.990048, 0.134735, 0.0947915, 1)
theme_override_colors/font_shadow_color = Color(0.400663, 0.0100097, 0.00555463, 1)
theme_override_fonts/font = ExtResource("8_uglhr")
theme_override_font_sizes/font_size = 100
text = "Try Harder..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTag" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -35.0
offset_right = 20.0
offset_bottom = -19.0
grow_horizontal = 2

[node name="Lifebar" type="ProgressBar" parent="PlayerTag"]
unique_name_in_owner = true
y_sort_enabled = true
clip_contents = true
custom_minimum_size = Vector2(100, 5)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.032
anchor_bottom = 0.7
offset_left = -2.0
offset_top = 9.0
offset_right = 56.592
offset_bottom = 11.8
scale = Vector2(0.452946, 0.159096)
theme_override_styles/fill = SubResource("StyleBoxTexture_cden2")
value = 100.0
rounded = true
show_percentage = false

[node name="Nickname" type="Label" parent="PlayerTag"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -7.0
offset_top = -10.0
offset_right = 53.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
vertical_alignment = 1

[node name="Flashlight" type="PointLight2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = -1
scale = Vector2(0.46669, 0.46669)
color = Color(1, 1, 0.639216, 1)
energy = 0.2
texture = ExtResource("10_cjekt")

[node name="SpinFlashlight" type="AnimationPlayer" parent="Flashlight"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_7lbrm")
}
autoplay = "Spin"

[node name="VOIP" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
autoplay = true
max_distance = 1000.0
bus = &"VOIP"

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("14_x2r6m")
outputPath = NodePath("../VOIP")

[node name="Input" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = true
bus = &"Mic"

[connection signal="area_entered" from="HurtArea" to="." method="_on_hurt_area_area_entered"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
